# lucas-skills

./: .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml  skill_manager.py  skill_manager_core.py  upstream.lock.yml  upstream.yml  vendor.py
.github/workflows/: sync-upstream.yml
docs/: upstream-sync.md
docs/superpowers/plans/: 2026-07-03-self-skills-optimization.md  2026-07-13-professional-writing.md  2026-07-14-global-skill-manager.md  2026-07-15-repository-layout-and-cli.md  2026-07-16-agent-manager-and-personal-instructions.md  2026-07-17-agent-manager-ui-clarity.md
docs/superpowers/specs/: 2026-07-03-self-skills-optimization-design.md  2026-07-13-professional-writing-skill-design.md  2026-07-14-global-skill-manager-design.md  2026-07-15-repository-layout-and-cli-design.md  2026-07-16-agent-manager-and-personal-instructions-design.md  2026-07-17-agent-manager-ui-clarity-design.md  (+2 more)
skill_manager_web/: index.html
skills/business-architecture-diagram/: SKILL.md
skills/git-history-rewrite/: SKILL.md
skills/handoff/: SKILL.md
skills/professional-writing/: SKILL.md
skills/technical-proposal-review/: README.md  SKILL.md
skills/wps365/: SKILL.md  _meta.json
tests/: test_agent_manager.py  test_agent_manager_http.py  test_agent_manager_instructions.py  test_agent_manager_web.py  test_project_layout.py  test_skill_manager.py  test_upstream_sync.py
tools/agent_manager/: __init__.py  cli.py  core.py  instructions.py  server.py  skills.py
tools/skill_manager/: cli.py
tools/upstream_sync/: __init__.py  upstream.lock.yml  upstream.yml  vendor.py
(+48 files in other folders)
