[project]
name = "lucas-skills-tools"
version = "0.1.0"
description = "Repository-local tools for managing and synchronizing lucas-skills"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML"]

[project.scripts]
agent-manager = "tools.agent_manager.cli:main"
upstream-sync = "tools.upstream_sync.vendor:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "tools"
